# capo

./: .appveyor.yml  .appveyor.yml.in  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: config.cmake.in
cmake/interface/: CMakeLists.txt
example/: CMakeLists.txt  example.cpp  example_music.cpp  example_sound.cpp  music_player.cpp  sound.cpp  version.cpp
ext/: CMakeLists.txt
include/capo/: CMakeLists.txt  capo.hpp  error_handler.hpp  instance.hpp  metadata.hpp  music.hpp  pcm.hpp  sound.hpp  source.hpp  types.hpp
include/capo/utils/: CMakeLists.txt  enum_array.hpp  erased_ptr.hpp  format_size.hpp  format_unit.hpp  id.hpp  vec3.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  capo.cpp  detail.hpp  impl_al.hpp  impl_stream.hpp  instance.cpp  music.cpp  pcm.cpp  sound.cpp  source.cpp
